// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot tests should match snapshot with cv secton 1`] = `
<header>
  <nav>
    <ul>
      <li>
        <a>
          <Arrow />
        </a>
      </li>
      <li>
        <a
          data-testid="sections-toggle"
          onClick={[Function]}
        >
          <span
            data-testid="projects"
          >
            'Projects'
          </span>
        </a>
      </li>
      <li>
        <a>
          <Arrow />
        </a>
      </li>
    </ul>
  </nav>
</header>
`;

exports[`Header snapshot tests should match snapshot with projects secton 1`] = `
<header>
  <nav>
    <ul>
      <li>
        <a>
          <Arrow />
        </a>
      </li>
      <li>
        <a
          data-testid="sections-toggle"
          onClick={[Function]}
        >
          <span
            data-testid="cv"
          >
            Cv'
          </span>
        </a>
      </li>
      <li>
        <a>
          <Arrow />
        </a>
      </li>
    </ul>
  </nav>
</header>
`;
